# BajtaHack2017-Code

./: .gitignore  .pylintrc  .travis.yml  BajtaHack.db  ControllerScriptPI2.py  LICENSE_AGPL-3.0.txt  PIR.py  README.md  README.rst  Report_template_H_group.docx  addUser.py  app.html  barcode.py  initdb.py  package-lock.json  piDown.json  setup.py  subelbase.py
B_MR_HOUSE/: Mr.pptx  README.md  Report_template.docx
Bajta17/: views.py
C_AlarmniSistem/: cert.pem  processIp.py  readme.rtf  simpleserver.py  updateArp.py
Code_Server/: README.md  schema_measurements.sql
D_Success/: srm_upload_image.sh
D_Success/camera_det/: CMakeLists.txt
D_Success/srm_client/: CMakeLists.txt  image_display_widget.cpp  image_display_widget.h  main.cpp  main_window.h
E_OneCupOfCoffee/: README.md  esp.lua
F_friđ/: LICENCE_AGPL-3.0.txt  README.md  Smart Fridge - “Fri Đ”.pptx
G_Unit/: G-Unit-Report.docx  G-Unit.pptx  README.doc
H_SistemZaKontroloLuci/: ControllerScript.py  Hišnikova-PISARNA.odp  bajtahack.sql  conf.json  httpclient.py  package.json  piUp.json  server.js
I_BistroumnaStalca/: .gitignore  ConfigModule.py  DatabaseUtilities.py  README.md  Server.py  schema.sql  schema_motion.sql
J_MotionConnect/: 3d_gesture.py  BajtaHack.pptx  BajtaHack_latest.pptx  README.md  api.py  authentication.py  config.py  devices.py  lights.py  orange_pi_control.py  prepare_database.py  requirements.txt  volume.py
K_DoIt/: README.md  do.it.psd  doit.pptx
L_hotelko/: .gitignore  README.md  Report_template.docx  pom.xml
M_PametenGovorecDomaciAsistent/: Presentation.pptx  README.md  (+1 more)
(+359 files in other folders)
