cmake_minimum_required(VERSION 2.8)
project( cameraDetection )
find_package( OpenCV REQUIRED )
INCLUDE_DIRECTORIES(AFTER ${OpenCV_INCLUDE_DIR} ${OpenCV_INCLUDE_DIRS} .)
add_executable( cameraDetection cameraDetection.cpp )
target_link_libraries( cameraDetection opencv_core opencv_imgproc opencv_calib3d opencv_video opencv_features2d opencv_ml opencv_highgui opencv_objdetect)
